--- a/views/index.njk
+++ b/views/index.njk
@@ -3,16 +3,11 @@
 <main class="container">
   <hero>
     <h1>Welome to the most amazing adventure</h1>
-    <img src="/img/cover.jpg" alt="Cover image">
+    <img src="/img/MarigoldCompressed.jpg" alt="Cover image">
   </hero>
-  <p>This webbpage will take you on an amazing adventure!</p>
+  <p>This webbpage will take you on an amazing adventure throughout the city of Marigold!</p>
   <p>Please insert Post code so the player can enter theire name!</p>
-  <p>As the sun sets over the mysterious land of Eldoria, you, [Your Character Name], find yourself drawn to an ancient,
-    hidden portal in the heart of your town. Whispers of an unimaginable adventure surround this enigmatic gateway, and
-    the townspeople speak of untold wonders that await beyond. Curiosity takes hold, and you decide to step through the
-    portal, uncertain of what lies ahead. The air shimmers with magic as you emerge into a realm where the rules of
-    reality seem to bend and twist. Your most amazing adventure is about to unfold, and the secrets of Eldoria are yours
-    to discover. What path will you choose in this realm of mystery and magic?</p>
-  <p><a href="/story/0">Please click here to begin.</a></p>
+  <p>As the sun rose over the kingdom of Marigold, the land was filled with a sense of unease. The evil sorcerer, Malakar, had risen to power and was terrorizing the people with his dark magic. He had unleashed a horde of monstrous creatures on the kingdom, leaving destruction in their wake.</p>
+  <p><a href="/story/0">Click here to begin your story!</a></p>
 </main>
 {% endblock %}
