--- a/views/part.njk
+++ b/views/part.njk
@@ -3,7 +3,12 @@
 <main class="container">
   {% if part %}
   <div>
-    <h2>{{part.name}}</h2>
+    <div class="hero">
+      <h1>{{part.name}}</h1>
+      {% if part.image %}
+      <img src="/img/{{part.image}}" alt="{{part.name}}">
+      {% endif %}
+    </div>
     <p>{{part.text}}</p>
     <ul>
       {% for option in part.options %}
