--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,8 @@
 body {
-  font-family: sans-serif;
+  font-family: 'Salsa', cursive;
   font-size: 1.2rem;
-  color: #121212;
-  background-color: #fefefe;
+  color: #155263;
+  background: linear-gradient(#ff6f3c, #ff9a3c, #ffc93c)
 }
 
 img {
@@ -15,4 +15,17 @@ img {
   margin-right: auto;
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+a {
+  color: #0f3a46;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #2d7e95;
+}
+
+ul {
+  list-style: none;
 }
