--- a/views/index.njk
+++ b/views/index.njk
@@ -2,7 +2,7 @@
 {% block content %}
 <main class="container">
   <hero>
-    <h1>Welome to the most amazing adventure</h1>
+    <h1>Welcome to an adventure through Marigold!</h1>
     <img src="/img/MarigoldCompressed.jpg" alt="Cover image">
   </hero>
   <p>This webbpage will take you on an amazing adventure throughout the city of Marigold!</p>
